data/derived/comb/progs/unify/prog6153.ml.out
Characters 134-150:
  | Sine e -> Printf.printf "sin(pi*%s)" (exprToString e)
                                         ^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         string
